:smiley: Fix small bugs in titles and alignments

--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -178,6 +178,7 @@ a {
 .kube-official-card {
   width: 100%;
   height: 170px;
+  margin-bottom: 4%;
   background-color: #f9f9f9;
 }
 
