--- a/src/assets/css/archive.css
+++ b/src/assets/css/archive.css
@@ -175,6 +175,7 @@
   width: 100%;
   height: 170px;
   margin-top: 5.4%;
+  margin-bottom: 4%;
   background-color: #f9f9f9;
 }
 
