--- a/src/assets/css/news.css
+++ b/src/assets/css/news.css
@@ -157,6 +157,7 @@
 .kube-official-card {
   width: 100%;
   height: 170px;
+  margin-bottom: 4%;
   background-color: #f9f9f9;
 }
 
